--- a/index.html
+++ b/index.html
@@ -1,1 +1,197 @@
-# busybusy
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
+     <meta name="viewport" content="width=device-width, initial-scale=1">
+     <script src="https://use.fontawesome.com/37471687aa.js"></script>
+     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+</head>
+
+  <body>
+  <section class="container">
+    <nav>
+      <div class="status-image">
+          <img class="status-image" src="media/Base.jpg">
+    </div>
+        <div class="nav-main">
+          <div class="back-nav">
+            <i class="fa fa-chevron-left fa-inverse fa-2x" aria-hidden="true"></i>
+            <h1 class="back">Back</h1>
+          </div>
+          <div class="header">
+            <h1>Washington & State St</h1>
+            <h3>Walking time: 3 minutes</h3>
+          </div>
+          <div class="hamburger-main">
+            <div class="hamburger"></div>
+            <div class="hamburger"></div>
+            <div class="hamburger"></div>
+          </div>
+        </div>
+
+    </nav>
+
+    <div class="frame">
+      <img class="frame" src="media/Frame.jpg">
+    </div>
+
+    <section class="bus-list">
+      <div class="flex-container1">
+        <div class="kid1">
+            <div id="circle-1">
+              <span class="innerTEXT">60</span>
+            </div>
+          </div>
+            <div class="kid2">
+          <p><span>Randolph / Harbor Dr</span></p>
+      <p class="direction-text">Eastbound</p>
+        </div>
+        <div class="kid3">
+          <p><span>3 MINS</span></p>
+          <p class="direction-text">Every 20 Mins</p>
+        </div>
+      </div>
+  </div>
+
+  <div class="flex-container">
+  <div class="kid1">
+            <div id="circle-2">
+              <span class="innerTEXT">124</span>
+            </div>
+          </div>
+          <div class="kid2">
+          <p><span>Navy Pier</span></p>
+          <p class="direction-text">Eastbound</p>
+        </div>
+        <div class="kid3">
+          <p><span>5 MINS</span</p>
+          <p class="direction-text">Every 10 Mins</p>
+        </div>
+      </div>
+    </div>
+
+<div class="flex-container">
+  <div class="kid1">
+            <div id="circle-3">
+              <span class="innerTEXT">151</span>
+            </div>
+          </div>
+          <div class="kid2">
+          <p><span>Devon / Clark</span></p>
+          <p class="direction-text">Northbound</p>
+        </div>
+        <div class="kid3">
+          <p><span>7 MINS</span></p>
+          <p class="direction-text">Every 16 Mins</p>
+        </div>
+      </div>
+      </div>
+
+<div class="flex-container">
+  <div class="kid1">
+            <div id="circle-4">
+              <span class="innerTEXT">J14</span>
+            </div>
+          </div>
+          <div class="kid2">
+          <p><span>103rd / Stony Island</span></p>
+          <p class="direction-text">Eastbound</p>
+        </div>
+        <div class="kid3">
+          <p><span>8 MINS<span></p>
+          <p class="direction-text">Every 15 Mins</p>
+      </div>
+    </div>
+  </div>
+
+<div class="flex-container">
+  <div class="kid1">
+            <div id="circle-2">
+              <span class="innerTEXT">124</span>
+            </div>
+            </div>
+            <div class="kid2">
+          <p><span>Navy Pier</span></p>
+          <p class="direction-text">Southbound</p>
+        </div>
+        <div class="kid3">
+          <p><span>9 MINS</span></p>
+          <p class="direction-text">Every 10 Mins</p>
+        </div>
+      </div>
+      </div>
+
+<div class="flex-container">
+  <div class="kid1">
+          <div id="circle-5">
+            <span class="innerTEXT">6X</span>
+          </div>
+        </div>
+        <div class="kid2"
+        <p><span>Jackson Park Express</span></p>
+        <p class="direction-text"> <mark class= "red">REROUTE</p>
+      </div>
+      <div class="kid3">
+        <p><span><mark class="red">N/A</mark></span></p>
+        <p class="direction-text">Delay</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="flex-container">
+    <div class="kid1">
+      <div id="circle-6">
+        <span class="innerTEXT">4</span>
+      </div>
+      </div>
+      <div class="kid2">
+      <p><span>Cottage Grove</span></p>
+        <p class="direction-text"> <mark class="red">OUT OF SERVICE</mark></p>
+      </div>
+<div class="kid3">
+      <p><span><mark class= "red">N/A</mark></span></p>
+      <p class="direction-text">Resumes 12:10AM</p>
+    </div>
+    </div>
+  </div>
+
+  <div class="flex-container">
+    <div class="kid1">
+        <div id="circle-7">
+          <span class="innerTEXT">20</span>
+        </div>
+      </div>
+      <div class="kid2">
+        <p><span>Madison</span></p>
+        <p class="direction-text"> <mark class="red">OUT OF SERVICE</mark></p>
+      </div>
+      <div class="kid3">
+        <p><span><mark class= "red">N/A</mark></span></p>
+        <p class="direction-text">Resumes 12:10AM</p>
+    </div>
+  </div>
+</div>
+
+<div class="flex-container">
+  <div class="kid1">
+        <div id="circle-8">
+          <span class="innerTEXT">157</span>
+        </div>
+        </div>
+        <div class="kid2">
+        <p><span>Streeterville / Taylor</span></p>
+          <p class="direction-text"> <mark class="red">OUT OF SERVICE</mark></p>
+        </div>
+        <div class="kid3">
+        <p><span><mark class= "red">N/A</mark></span></p>
+        <p class="direction-text">Resumes 6:00AM</p>
+      </div>
+    </div>
+    </div>
+  </section>
+</section>
+  </body>
+</html>
