--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <section class="container">
     <nav>
       <div class="status-image">
-          <img class="status-image" src="media/Base.jpg">
+          <img class="status-image" src="media/Base.png">
     </div>
         <div class="nav-main">
           <div class="back-nav">
